Adicionar Oficinas Protótipo

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
           <div class="conteudo-barra-de-navegacao collapse navbar-collapse" id="ConteudoNavbar">
             <ul class="navbar-nav ml-auto">
               <li class="item-barra-de-navegacao nav-item">
-                <a class="nav-link" href="">Serviços</a>
+                <a class="nav-link" href="#seccao-servicos">Serviços</a>
               </li>
               <li class="item-barra-de-navegacao nav-item">
-                <a class="nav-link" href="">Oficinas</a>
+                <a class="nav-link" href="#seccao-oficinas">Oficinas</a>
               </li>
               <li class="item-barra-de-navegacao nav-item">
-                <a class="nav-link" href="">Contato</a>
+                <a class="nav-link" href="#seccao-contato">Contato</a>
               </li>
             </ul>
           </div>
@@ -112,21 +112,78 @@
 
     <section class="seccao" id="seccao-servicos">
 
-
+      <h1>Serviços</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Feugiat in ante metus dictum at tempor commodo ullamcorper. Neque volutpat ac tincidunt vitae
+        semper. Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi. Cursus sit amet dictum sit. Ornare
+        arcu dui vivamus arcu felis bibendum ut tristique. Id diam maecenas ultricies mi eget mauris. Lorem sed risus
+        ultricies tristique nulla aliquet enim. Volutpat odio facilisis mauris sit amet massa. Augue ut lectus arcu
+        bibendum. Sed nisi lacus sed viverra tellus in. Velit laoreet id donec ultrices tincidunt arcu non. Aliquet
+        porttitor lacus luctus accumsan tortor. A lacus vestibulum sed arcu non. Venenatis cras sed felis eget velit.
+        Consequat interdum varius sit amet mattis vulputate enim nulla aliquet. Mauris nunc congue nisi vitae. Cursus
+        metus aliquam eleifend mi in nulla posuere.</p>
 
     </section> <!-- Fim seccao-servicos -->
 
     <section class="seccao" id="seccao-oficinas">
 
+      <h1>Oficinas</h1>
+
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="cartao-oficina card">
+            <div class="card-header">
+              <h2>Cuiabá - MT</h2>
+            </div>
+            <div class="card-body">
+              <p><a href="tel:556536672072">+55 (65) 3667-2072</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="cartao-oficina card">
+            <div class="card-header">
+              <h2>Matupá - MT</h2>
+            </div>
+            <div class="card-body">
+              <p><a href="tel:556635951456">+55 (66) 3595-1456</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="cartao-oficina card">
+            <div class="card-header">
+              <h2>Itaituba - PA</h2>
+            </div>
+            <div class="card-body">
+              <p><a href="tel:559392036402">+55 (93) 9203-6402</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
     </section> <!-- Fim seccao-oficinas -->
 
     <section class="seccao" id="seccao-contato">
 
+      <h1>Contato</h1>
 
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Feugiat in ante metus dictum at tempor commodo ullamcorper. Neque volutpat ac tincidunt vitae
+        semper. Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi. Cursus sit amet dictum sit. Ornare
+        arcu dui vivamus arcu felis bibendum ut tristique. Id diam maecenas ultricies mi eget mauris. Lorem sed risus
+        ultricies tristique nulla aliquet enim. Volutpat odio facilisis mauris sit amet massa. Augue ut lectus arcu
+        bibendum. Sed nisi lacus sed viverra tellus in. Velit laoreet id donec ultrices tincidunt arcu non. Aliquet
+        porttitor lacus luctus accumsan tortor. A lacus vestibulum sed arcu non. Venenatis cras sed felis eget velit.
+        Consequat interdum varius sit amet mattis vulputate enim nulla aliquet. Mauris nunc congue nisi vitae. Cursus
+        metus aliquam eleifend mi in nulla posuere.</p>
 
     </section> <!-- Fim seccao-contato -->
+
+    <section class="seccao" id="seccao-rodape">
+
+    </section> <!-- Fim seccao-rodape -->
 
   </div> <!-- Fim pagina-inteira -->
 
