--- a/index.html
+++ b/index.html
@@ -113,15 +113,8 @@
     <section class="seccao" id="seccao-servicos">
 
       <h1>Serviços</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Feugiat in ante metus dictum at tempor commodo ullamcorper. Neque volutpat ac tincidunt vitae
-        semper. Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi. Cursus sit amet dictum sit. Ornare
-        arcu dui vivamus arcu felis bibendum ut tristique. Id diam maecenas ultricies mi eget mauris. Lorem sed risus
-        ultricies tristique nulla aliquet enim. Volutpat odio facilisis mauris sit amet massa. Augue ut lectus arcu
-        bibendum. Sed nisi lacus sed viverra tellus in. Velit laoreet id donec ultrices tincidunt arcu non. Aliquet
-        porttitor lacus luctus accumsan tortor. A lacus vestibulum sed arcu non. Venenatis cras sed felis eget velit.
-        Consequat interdum varius sit amet mattis vulputate enim nulla aliquet. Mauris nunc congue nisi vitae. Cursus
-        metus aliquam eleifend mi in nulla posuere.</p>
+
+      <div class="row"></div>
 
     </section> <!-- Fim seccao-servicos -->
 
@@ -136,7 +129,19 @@
               <h2>Cuiabá - MT</h2>
             </div>
             <div class="card-body">
-              <p><a href="tel:556536672072">+55 (65) 3667-2072</a></p>
+              <p><a href="tel:+55(65)36672072"><svg width="1em" height="1em" viewBox="0 0 16 16"
+                    class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                      d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z" />
+                  </svg>&nbsp; +55 (65) 3667-2072
+                </a></p>
+              <p><a
+                  href="https://www.google.com.br/maps/place/Tag/@-15.6528314,-55.9952373,261m/data=!3m1!1e3!4m5!3m4!1s0x0:0x17ffc3dec18ad1c6!8m2!3d-15.6528314!4d-55.9946901"><svg
+                    width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-geo-alt" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                      d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                  </svg><br>Avenida A, Nº 730 (Paralelo BR 364)<br>Km 402 - CEP 78098-270<br>Distrito Industrial</p></a>
             </div>
           </div>
         </div>
@@ -146,7 +151,13 @@
               <h2>Matupá - MT</h2>
             </div>
             <div class="card-body">
-              <p><a href="tel:556635951456">+55 (66) 3595-1456</a></p>
+              <p><a href="tel:+55(66)35951456"><svg width="1em" height="1em" viewBox="0 0 16 16"
+                    class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                      d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z" />
+                  </svg>&nbsp; +55 (66) 3595-1456
+                </a></p>
+              <p></p>
             </div>
           </div>
         </div>
@@ -156,7 +167,12 @@
               <h2>Itaituba - PA</h2>
             </div>
             <div class="card-body">
-              <p><a href="tel:559392036402">+55 (93) 9203-6402</a></p>
+              <p><a href="tel:+55(93)92036402"><svg width="1em" height="1em" viewBox="0 0 16 16"
+                    class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                      d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z" />
+                  </svg>&nbsp; +55 (93) 9203-6402
+                </a></p>
             </div>
           </div>
         </div>
