--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                     class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd"
                       d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z" />
-                  </svg>&nbsp; +55 (65) 3667-2072
+                  </svg><br>+55 (65) 3667-2072
                 </a></p>
-              <p><a
+              <p><a target="_blank"
                   href="https://www.google.com.br/maps/place/Tag/@-15.6528314,-55.9952373,261m/data=!3m1!1e3!4m5!3m4!1s0x0:0x17ffc3dec18ad1c6!8m2!3d-15.6528314!4d-55.9946901"><svg
                     width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-geo-alt" fill="currentColor"
                     xmlns="http://www.w3.org/2000/svg">
@@ -155,7 +155,7 @@
                     class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd"
                       d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z" />
-                  </svg>&nbsp; +55 (66) 3595-1456
+                  </svg><br>+55 (66) 3595-1456
                 </a></p>
               <p></p>
             </div>
@@ -171,7 +171,7 @@
                     class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd"
                       d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z" />
-                  </svg>&nbsp; +55 (93) 9203-6402
+                  </svg><br>+55 (93) 9203-6402
                 </a></p>
             </div>
           </div>
