--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
   <!-- Fontes externas -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&family=Tangerine&display=swap"
     rel="stylesheet">
+
+  <!-- Ícones externnos -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/v4-shims.css">
 
   <!-- Arquivo CSS local -->
   <link rel="stylesheet" href="styles.css">
@@ -43,7 +47,7 @@
 
     <!---------- Barra De Navegação ---------->
 
-    <section class="seccao" id="seccao-barra-de-navegacao">
+    <section id="barra-de-navegacao">
 
       <div class="container-barra-de-navegacao container-fluid">
         <nav class="nav-barra-de-navegacao navbar navbar-expand-lg navbar-light">
@@ -63,13 +67,13 @@
           <div class="conteudo-barra-de-navegacao collapse navbar-collapse" id="ConteudoNavbar">
             <ul class="navbar-nav ml-auto">
               <li class="item-barra-de-navegacao nav-item">
-                <a class="nav-link" href="#seccao-servicos">Serviços</a>
+                <a class="nav-link" href="#servicos">Serviços</a>
               </li>
               <li class="item-barra-de-navegacao nav-item">
-                <a class="nav-link" href="#seccao-oficinas">Oficinas</a>
+                <a class="nav-link" href="#oficinas">Oficinas</a>
               </li>
               <li class="item-barra-de-navegacao nav-item">
-                <a class="nav-link" href="#seccao-contato">Contato</a>
+                <a class="nav-link" href="#contato">Contato</a>
               </li>
             </ul>
           </div>
@@ -77,9 +81,17 @@
         </nav>
       </div> <!-- Fim container-da-barra-de-navegacao -->
 
-    </section> <!-- Fim seccao-barra-de-navegacao -->
+    </section> <!-- Fim barra-de-navegacao -->
 
-    <section class="seccao" id="seccao-carrossel">
+    <section id="fundacao">
+
+      <hr>
+      <p>Esta empresa foi fundada em 1996 por Elio Tag</p>
+      <hr>
+
+    </section>
+
+    <section id="carrossel">
 
       <div id="Carrossel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -108,17 +120,17 @@
         </a>
       </div>
 
-    </section> <!-- Fim seccao-carrossel -->
+    </section> <!-- Fim carrossel -->
 
-    <section class="seccao" id="seccao-servicos">
+    <section id="servicos">
 
       <h1>Serviços</h1>
 
       <div class="row"></div>
 
-    </section> <!-- Fim seccao-servicos -->
+    </section> <!-- Fim servicos -->
 
-    <section class="seccao" id="seccao-oficinas">
+    <section id="oficinas">
 
       <h1>Oficinas</h1>
 
@@ -129,19 +141,12 @@
               <h2>Cuiabá - MT</h2>
             </div>
             <div class="card-body">
-              <p><a href="tel:+55(65)36672072"><svg width="1em" height="1em" viewBox="0 0 16 16"
-                    class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                      d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z" />
-                  </svg><br>+55 (65) 3667-2072
+              <p><a href="tel:+55(65)36672072"><i class="fas fa-phone-alt"></i><br>+55 (65) 3667-2072
                 </a></p>
               <p><a target="_blank"
-                  href="https://www.google.com.br/maps/place/Tag/@-15.6528314,-55.9952373,261m/data=!3m1!1e3!4m5!3m4!1s0x0:0x17ffc3dec18ad1c6!8m2!3d-15.6528314!4d-55.9946901"><svg
-                    width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-geo-alt" fill="currentColor"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                      d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-                  </svg><br>Avenida A, Nº 730 (Paralelo BR 364)<br>Km 402 - CEP 78098-270<br>Distrito Industrial</p></a>
+                  href="https://www.google.com.br/maps/place/Tag/@-15.6528314,-55.9952373,261m/data=!3m1!1e3!4m5!3m4!1s0x0:0x17ffc3dec18ad1c6!8m2!3d-15.6528314!4d-55.9946901">
+                  <i class="fas fa-map-marker-alt"></i><br>Avenida A, Nº 730 (Paralelo BR 364)<br>Km 402 - CEP
+                  78098-270<br>Distrito Industrial</p></a>
             </div>
           </div>
         </div>
@@ -151,13 +156,11 @@
               <h2>Matupá - MT</h2>
             </div>
             <div class="card-body">
-              <p><a href="tel:+55(66)35951456"><svg width="1em" height="1em" viewBox="0 0 16 16"
-                    class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                      d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z" />
-                  </svg><br>+55 (66) 3595-1456
+              <p><a href="tel:+55(66)35951456"><i class="fas fa-phone-alt"></i><br>+55 (66) 3595-1456
                 </a></p>
-              <p></p>
+              <p><a target="_blank" href=""><i class="fas fa-map-marker-alt"></i><br>Rua 01, Quadra 01, Nº 01<br>Km
+                  1032.5 - CEP 78525-000<br>Zona
+                  Rural</p></a>
             </div>
           </div>
         </div>
@@ -167,21 +170,20 @@
               <h2>Itaituba - PA</h2>
             </div>
             <div class="card-body">
-              <p><a href="tel:+55(93)92036402"><svg width="1em" height="1em" viewBox="0 0 16 16"
-                    class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                      d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z" />
-                  </svg><br>+55 (93) 9203-6402
+              <p><a href="tel:+55(93)92036402"><i class="fas fa-phone-alt"></i><br>+55 (93) 9203-6402
                 </a></p>
+              <p><a target="_blank" href=""><i class="fas fa-map-marker-alt"></i><br>Rod. Transamazônica - BR 230, Nº
+                  09<br>Km 30 - CEP
+                  68192-700<br>Zona Rural - Campo Verde</p></a>
             </div>
           </div>
         </div>
       </div>
 
 
-    </section> <!-- Fim seccao-oficinas -->
+    </section> <!-- Fim oficinas -->
 
-    <section class="seccao" id="seccao-contato">
+    <section id="contato">
 
       <h1>Contato</h1>
 
@@ -195,11 +197,14 @@
         Consequat interdum varius sit amet mattis vulputate enim nulla aliquet. Mauris nunc congue nisi vitae. Cursus
         metus aliquam eleifend mi in nulla posuere.</p>
 
-    </section> <!-- Fim seccao-contato -->
+    </section> <!-- Fim contato -->
 
-    <section class="seccao" id="seccao-rodape">
+    <section id="rodape">
 
-    </section> <!-- Fim seccao-rodape -->
+      <a href="https://www.instagram.com/tagcarretas/" class="icone-rodape"><i class="fab fa-instagram"></i></a><a
+        href="https://www.facebook.com/tagcarretas/" class="icone-rodape"><i class="fab fa-facebook-f"></i></a>
+
+    </section> <!-- Fim rodape -->
 
   </div> <!-- Fim pagina-inteira -->
 
