--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
   <!-- Fontes externas -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&family=Tangerine&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&family=Tangerine&display=swap"
     rel="stylesheet">
 
   <!-- Ícones externnos -->
@@ -201,8 +202,9 @@
 
     <section id="rodape">
 
-      <a href="https://www.instagram.com/tagcarretas/" class="icone-rodape"><i class="fab fa-instagram"></i></a><a
-        href="https://www.facebook.com/tagcarretas/" class="icone-rodape"><i class="fab fa-facebook-f"></i></a>
+      <a target="_blank" href="https://www.instagram.com/tagcarretas/" class="icone-rodape"><i
+          class="fab fa-instagram"></i></a><a target="_blank" href="https://www.facebook.com/tagcarretas/"
+        class="icone-rodape"><i class="fab fa-facebook-f"></i></a>
 
     </section> <!-- Fim rodape -->
 
