--- a/index.html
+++ b/index.html
@@ -202,9 +202,10 @@
 
     <section id="rodape">
 
-      <a target="_blank" href="https://www.instagram.com/tagcarretas/" class="icone-rodape"><i
-          class="fab fa-instagram"></i></a><a target="_blank" href="https://www.facebook.com/tagcarretas/"
-        class="icone-rodape"><i class="fab fa-facebook-f"></i></a>
+      <a target="_blank" href="https://www.instagram.com/tagcarretas/" class="link-rodape"><i
+          class="icone-rodape fab fa-instagram"></i>&nbsp; @tagcarretas</a><a target="_blank"
+        href="https://www.facebook.com/tagcarretas/" class="link-rodape"><i
+          class="icone-rodape fab fa-facebook-f"></i>&nbsp; @tagcarretas</a>
 
     </section> <!-- Fim rodape -->
 
