--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                 </a></p>
               <p><a target="_blank"
                   href="https://www.google.com.br/maps/place/Tag/@-15.6528314,-55.9952373,261m/data=!3m1!1e3!4m5!3m4!1s0x0:0x17ffc3dec18ad1c6!8m2!3d-15.6528314!4d-55.9946901">
-                  <i class="fas fa-map-marker-alt"></i><br>Avenida A, Nº 730 (Paralelo BR 364)<br>Km 402 - CEP
-                  78098-270<br>Distrito Industrial</p></a>
+                  <i class="fas fa-map-marker-alt"></i><br>Avenida A, Nº 730<br>Km 402 - CEP
+                  78098-270<br>Paralelo BR à 364<br>Distrito Industrial</p></a>
             </div>
           </div>
         </div>
@@ -159,9 +159,11 @@
             <div class="card-body">
               <p><a href="tel:+55(66)35951456"><i class="fas fa-phone-alt"></i><br>+55 (66) 3595-1456
                 </a></p>
-              <p><a target="_blank" href=""><i class="fas fa-map-marker-alt"></i><br>Rua 01, Quadra 01, Nº 01<br>Km
+              <p><a target="_blank"
+                  href="https://www.google.com/maps/place/Posto+Mirian+7/@-10.1498278,-54.9312561,274m/data=!3m1!1e3!4m5!3m4!1s0x9307255ab064a501:0x475676a1f91d89cc!8m2!3d-10.1500825!4d-54.9315255"><i
+                    class="fas fa-map-marker-alt"></i><br>Rua 01, Quadra 01, Nº 01<br>Km
                   1032.5 - CEP 78525-000<br>Zona
-                  Rural</p></a>
+                  Rural<br>Anexo ao Posto Mirian</p></a>
             </div>
           </div>
         </div>
@@ -173,9 +175,11 @@
             <div class="card-body">
               <p><a href="tel:+55(93)92036402"><i class="fas fa-phone-alt"></i><br>+55 (93) 9203-6402
                 </a></p>
-              <p><a target="_blank" href=""><i class="fas fa-map-marker-alt"></i><br>Rod. Transamazônica - BR 230, Nº
+              <p><a target="_blank"
+                  href="https://www.google.com/maps/place/Posto+Mirian+5/@-4.3474225,-55.7882763,277m/data=!3m1!1e3!4m5!3m4!1s0x925fe8edd2f464a5:0x82290d621577c981!8m2!3d-4.3472611!4d-55.7885668"><i
+                    class="fas fa-map-marker-alt"></i><br>Rod. Transamazônica - BR 230, Nº
                   09<br>Km 30 - CEP
-                  68192-700<br>Zona Rural - Campo Verde</p></a>
+                  68192-700<br>Zona Rural - Campo Verde<br>Anexo ao Posto Mirian</p></a>
             </div>
           </div>
         </div>
