--- a/index.html
+++ b/index.html
@@ -191,25 +191,17 @@
     <section id="contato">
 
       <h1>Contato</h1>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Feugiat in ante metus dictum at tempor commodo ullamcorper. Neque volutpat ac tincidunt vitae
-        semper. Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi. Cursus sit amet dictum sit. Ornare
-        arcu dui vivamus arcu felis bibendum ut tristique. Id diam maecenas ultricies mi eget mauris. Lorem sed risus
-        ultricies tristique nulla aliquet enim. Volutpat odio facilisis mauris sit amet massa. Augue ut lectus arcu
-        bibendum. Sed nisi lacus sed viverra tellus in. Velit laoreet id donec ultrices tincidunt arcu non. Aliquet
-        porttitor lacus luctus accumsan tortor. A lacus vestibulum sed arcu non. Venenatis cras sed felis eget velit.
-        Consequat interdum varius sit amet mattis vulputate enim nulla aliquet. Mauris nunc congue nisi vitae. Cursus
-        metus aliquam eleifend mi in nulla posuere.</p>
+      <p><i class="icone-contato fas fa-envelope"></i>adm@tagecia.com.br</p>
+      <p><a href="tel:+55(65)99241-8316"><i class="icone-contato fab fa-whatsapp"></i>+55 (65) 9 9241-8316</a></p>
 
     </section> <!-- Fim contato -->
 
     <section id="rodape">
 
       <a target="_blank" href="https://www.instagram.com/tagcarretas/" class="link-rodape"><i
-          class="icone-rodape fab fa-instagram"></i>&nbsp; @tagcarretas</a><a target="_blank"
+          class="icone-rodape fab fa-instagram"></i>@tagcarretas</a><a target="_blank"
         href="https://www.facebook.com/tagcarretas/" class="link-rodape"><i
-          class="icone-rodape fab fa-facebook-f"></i>&nbsp; @tagcarretas</a>
+          class="icone-rodape fab fa-facebook-f"></i>@tagcarretas</a>
 
     </section> <!-- Fim rodape -->
 
