--- a/index.html
+++ b/index.html
@@ -188,22 +188,22 @@
 
     </section> <!-- Fim contato -->
 
+    <section id="rodape">
+
+    <a target="_blank" href="https://www.instagram.com/tagcarretas/" class="link-rodape"><i
+        class="icone-rodape fab fa-instagram"></i>@tagcarretas</a><a target="_blank"
+      href="https://www.facebook.com/tagcarretas/" class="link-rodape"><i
+        class="icone-rodape fab fa-facebook-f"></i>@tagcarretas</a>
+
+    </section> <!-- Fim rodape -->
+
     <section id="fundacao">
 
       <hr>
       <p>Esta empresa foi fundada em 1996 por Elio Tag</p>
       <hr>
 
-    </section>
-
-    <section id="rodape">
-
-      <a target="_blank" href="https://www.instagram.com/tagcarretas/" class="link-rodape"><i
-          class="icone-rodape fab fa-instagram"></i>@tagcarretas</a><a target="_blank"
-        href="https://www.facebook.com/tagcarretas/" class="link-rodape"><i
-          class="icone-rodape fab fa-facebook-f"></i>@tagcarretas</a>
-
-    </section> <!-- Fim rodape -->
+    </section> <!-- Fim fundacao -->
 
   </div> <!-- Fim pagina-inteira -->
 
