--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <img src="media/exemplo2.png" class="imagem-carrossel" alt="...">
           </div>
           <div class="carousel-item" data-interval=4000>
-            <img src="media/exemplo3.png" class="imagem-carrossel" alt="...">
+            <img src="media/Imagem1.1.png" class="imagem-carrossel" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#Carrossel" role="button" data-slide="prev">
@@ -182,18 +182,35 @@
 
     <section id="contato">
 
-      <h1>Contato</h1>
-      <p><i class="icone-contato fas fa-envelope"></i>adm@tagecia.com.br</p>
-      <p><a href="tel:+55(65)99241-8316"><i class="icone-contato fab fa-whatsapp"></i>+55 (65) 9 9241-8316</a></p>
+      <h1 class="titulo-contato">Contato</h1>
+      <div class="row">
+        <div class="col-lg-4 col-md-6">
+          <p><i class="icone-contato fas fa-envelope"></i>adm@tagecia.com.br</p>
+          <p><i class="icone-contato fas fa-envelope"></i>servicos@tagecia.com.br</p>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <p><i class="icone-contato fas fa-envelope"></i>compras@tagecia.com.br</p>
+          <p><i class="icone-contato fas fa-envelope"></i>financeiro@tagecia.com.br</p>
+        </div>
+        <div class="col-lg-4 ultima-coluna-contato">
+          <p><i class="icone-contato fas fa-envelope"></i>oficina@tagecia.com.br</p>
+          <p><a href="tel:+55(65)99241-8316"><i class="icone-contato fab fa-whatsapp"></i>+55 (65) 9 9241-8316</a></p>
+        </div>
+      </div>
 
     </section> <!-- Fim contato -->
 
     <section id="rodape">
 
-    <a target="_blank" href="https://www.instagram.com/tagcarretas/" class="link-rodape"><i
-        class="icone-rodape fab fa-instagram"></i>@tagcarretas</a><a target="_blank"
-      href="https://www.facebook.com/tagcarretas/" class="link-rodape"><i
-        class="icone-rodape fab fa-facebook-f"></i>@tagcarretas</a>
+      <div class="row">
+        <div class="col-lg-6 col-md-6 instagram">
+          <a target="_blank" href="https://www.instagram.com/tagcarretas/" class="link-rodape"><i
+              class="icone-rodape fab fa-instagram"></i>@tagcarretas</a>
+        </div>
+        <div class="col-lg-6 col-md-6 facebook">
+          <a target="_blank" href="https://www.facebook.com/tagcarretas/" class="link-rodape"><i
+              class="icone-rodape fab fa-facebook-f"></i>@tagcarretas</a>
+        </div>
 
     </section> <!-- Fim rodape -->
 
