--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;700&family=Tangerine&display=swap"
     rel="stylesheet">
 
-  <!-- Ícones externnos -->
+  <!-- Ícones externos -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/v4-shims.css">
 
