--- a/index.html
+++ b/index.html
@@ -91,16 +91,24 @@
           <li data-target="#Carrossel" data-slide-to="0" class="active"></li>
           <li data-target="#Carrossel" data-slide-to="1"></li>
           <li data-target="#Carrossel" data-slide-to="2"></li>
+          <li data-target="#Carrossel" data-slide-to="3"></li>
+          <li data-target="#Carrossel" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active" data-interval=4000>
-            <img src="media/exemplo1.png" class="imagem-carrossel" alt="...">
+            <img src="media/img1.jpg" class="imagem-carrossel" alt="...">
           </div>
           <div class="carousel-item" data-interval=4000>
-            <img src="media/exemplo2.png" class="imagem-carrossel" alt="...">
+            <img src="media/img2.jpg" class="imagem-carrossel" alt="...">
           </div>
           <div class="carousel-item" data-interval=4000>
-            <img src="media/Imagem1.1.png" class="imagem-carrossel" alt="...">
+            <img src="media/img3.jpg" class="imagem-carrossel" alt="...">
+          </div>
+          <div class="carousel-item" data-interval=4000>
+            <img src="media/img4.jpg" class="imagem-carrossel" alt="...">
+          </div>
+          <div class="carousel-item" data-interval=4000>
+            <img src="media/img5.jpg" class="imagem-carrossel" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#Carrossel" role="button" data-slide="prev">
@@ -183,44 +191,47 @@
     <section id="contato">
 
       <h1 class="titulo-contato">Contato</h1>
-      <div class="row">
-        <div class="col-lg-4 col-md-6">
-          <p><i class="icone-contato fas fa-envelope"></i>adm@tagecia.com.br</p>
-          <p><i class="icone-contato fas fa-envelope"></i>servicos@tagecia.com.br</p>
+      <center>
+        <div class="row">
+          <div class="col-lg-6 col-md-6">
+            <p><i class="icone-contato fas fa-envelope"></i>adm@tagecia.com.br</p>
+            <p><i class="icone-contato fas fa-envelope"></i>servicos@tagecia.com.br</p>
+          </div>
+          <div class="col-lg-6 col-md-6">
+            <p><i class="icone-contato fas fa-envelope"></i>oficina@tagecia.com.br</p>
+            <p><i class="icone-contato fas fa-envelope"></i>financeiro@tagecia.com.br</p>
+          </div>
         </div>
-        <div class="col-lg-4 col-md-6">
-          <p><i class="icone-contato fas fa-envelope"></i>compras@tagecia.com.br</p>
-          <p><i class="icone-contato fas fa-envelope"></i>financeiro@tagecia.com.br</p>
-        </div>
-        <div class="col-lg-4 ultima-coluna-contato">
+      </center>
+      <!-- <div class="col-lg-4 ultima-coluna-contato">
           <p><i class="icone-contato fas fa-envelope"></i>oficina@tagecia.com.br</p>
           <p><a href="tel:+55(65)99241-8316"><i class="icone-contato fab fa-whatsapp"></i>+55 (65) 9 9241-8316</a></p>
-        </div>
+        </div> -->
+  </div>
+
+  </section> <!-- Fim contato -->
+
+  <section id="rodape">
+
+    <div class="row">
+      <div class="col-lg-6 col-md-6 instagram">
+        <a target="_blank" href="https://www.instagram.com/tagcarretas/" class="link-rodape"><i
+            class="icone-rodape fab fa-instagram"></i>@tagcarretas</a>
+      </div>
+      <div class="col-lg-6 col-md-6 facebook">
+        <a target="_blank" href="https://www.facebook.com/tagcarretas/" class="link-rodape"><i
+            class="icone-rodape fab fa-facebook-f"></i>@tagcarretas</a>
       </div>
 
-    </section> <!-- Fim contato -->
+  </section> <!-- Fim rodape -->
 
-    <section id="rodape">
+  <section id="fundacao">
 
-      <div class="row">
-        <div class="col-lg-6 col-md-6 instagram">
-          <a target="_blank" href="https://www.instagram.com/tagcarretas/" class="link-rodape"><i
-              class="icone-rodape fab fa-instagram"></i>@tagcarretas</a>
-        </div>
-        <div class="col-lg-6 col-md-6 facebook">
-          <a target="_blank" href="https://www.facebook.com/tagcarretas/" class="link-rodape"><i
-              class="icone-rodape fab fa-facebook-f"></i>@tagcarretas</a>
-        </div>
+    <hr>
+    <p>Esta empresa foi fundada em 1996 por Elio Tag</p>
+    <hr>
 
-    </section> <!-- Fim rodape -->
-
-    <section id="fundacao">
-
-      <hr>
-      <p>Esta empresa foi fundada em 1996 por Elio Tag</p>
-      <hr>
-
-    </section> <!-- Fim fundacao -->
+  </section> <!-- Fim fundacao -->
 
   </div> <!-- Fim pagina-inteira -->
 
