Alterando serviços e mudando de oficinas para unidades.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <a class="nav-link" href="#servicos">Serviços</a>
               </li>
               <li class="item-barra-de-navegacao nav-item">
-                <a class="nav-link" href="#oficinas">Oficinas</a>
+                <a class="nav-link" href="#unidades">Unidades</a>
               </li>
               <li class="item-barra-de-navegacao nav-item">
                 <a class="nav-link" href="#contato">Contato</a>
@@ -127,13 +127,26 @@
 
       <h1>Serviços</h1>
 
-      <div class="row"></div>
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <p class="servico-tit">Em todas as unidades</p>
+          <p class="servico">Cubos</p>
+          <p class="servico">Molas</p>
+          <p class="servico">Freios</p>
+          <p class="servico">Soldas</p>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <p class="servico-tit">Somente em Cuiabá</p>
+          <p class="servico">Alinhamento de Chassis</p>
+          <p class="servico">Alinhamento de Eixos</p>
+          <p class="servico">Reformas de Carretas</p>
+      </div>
 
     </section> <!-- Fim servicos -->
 
-    <section id="oficinas">
+    <section id="unidades">
 
-      <h1>Oficinas</h1>
+      <h1>Unidades</h1>
 
       <div class="row">
         <div class="col-lg-4">
@@ -186,7 +199,7 @@
       </div>
 
 
-    </section> <!-- Fim oficinas -->
+    </section> <!-- Fim unidades -->
 
     <section id="contato">
 
